prevent popup (tooltip) clipping

--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -561,9 +561,6 @@ table {
 .table_scrollarea {
   position: relative;
   clear: both;
-  overflow-y: visible;
-  -ms-overflow-y: visible;
-  overflow: auto;
   transition: opacity 200ms;
   &.paging {
     opacity : 0.5 !important;
